@@ -618,3 +618,7 @@ Set the add-in to 0 if you want no effect.
 198: "Attempt to access non-existant register %4x." (Error)
 This sprite attempts to access a GRF register that doesn't exist.
 Read from, or write to, a register in the 0000..010F range.
+
+199: "<off> ID <id> previously specified at offset <off>." (Warn 1)
+The named ID was specified twice in this action 3.
+Remove the second specification.
