@@ -250,6 +250,7 @@ NFO_MESSAGE(GENERIC_AND_OVERRIDE,"Action 3 may not be both generic and an overri
 NFO_MESSAGE(RECURSIVE_F,"Action F may not chain to itself.\n",USE_PREFIX)
 NFO_MESSAGE(EXCESSIVE_ADD,"<add-in-%d> should not be negative.\n",USE_PREFIX|HAS_OFFSET)
 NFO_MESSAGE(NOT_A_REGISTER,"Attempt to access non-existant register %4x.\n",USE_PREFIX|HAS_OFFSET)
+NFO_MESSAGE(DUPLICATE_ID,"ID %2x previously specified at offset %d.\n",USE_PREFIX|HAS_OFFSET)
 
 /* Insert new NFO_MESSAGEs above this line unless a MESSAGE_UNUSED appears in a logical location. */
 
